[workspace]
members = [
    "cuppies/ch32v003",
    "cpu/qingkev2a",
    "cuppies/qemu-rv32-virt",
    "cpu/rv32i",
    "xdd-proto",
    "sherbet",
]
resolver = "2"

[profile.dev]
opt-level = "z"

[workspace.dependencies]
qingkev2a = { path = "cpu/qingkev2a" }
xdd-proto = { path = "xdd-proto" }
sherbet = { path = "sherbet" }
