[workspace]
members = [
    "cuppies/qemu-rv32-virt",
    "cuppies/ch32v003",
    "topping/qingke-v2a",
    "topping/rv32",
    "sherbet",
]
resolver = "2"

[profile.dev]
opt-level = "z"

[workspace.dependencies]
qingke-v2a = { path = "topping/qingke-v2a" }
rv32 = { path = "topping/rv32" }
sherbet = { path = "sherbet" }
